edit integ tests